# hindsight

./: .env.example  .gitignore  CLAUDE.md  PAPER_DRAFT.md  README.md  package-lock.json  package.json
hindsight-all/: pyproject.toml
hindsight-all-slim/: pyproject.toml
hindsight-api/: pyproject.toml
hindsight-api-slim/: README.md  pyproject.toml
hindsight-api-slim/hindsight_api/: __init__.py  _vector_index.py  config.py  config_resolver.py  main.py  mcp_tools.py  metrics.py  migrations.py  models.py  tracing.py
hindsight-api-slim/hindsight_api/admin/: cli.py
hindsight-api-slim/hindsight_api/api/: http.py  mcp.py
hindsight-api-slim/hindsight_api/engine/: audit.py  bank_stats_cache.py  cross_encoder.py  db_budget.py  db_utils.py  embeddings.py  entity_resolver.py  graph_maintenance.py  interface.py  link_recompute.py  llm_interface.py  llm_trace.py  llm_wrapper.py  maintenance.py  memory_engine.py  operation_metadata.py  response_models.py  task_backend.py
hindsight-api-slim/hindsight_api/extensions/: __init__.py  context.py  memory_defense.py  operation_validator.py  tenant.py
hindsight-api-slim/hindsight_api/webhooks/: __init__.py  manager.py  models.py
hindsight-api-slim/hindsight_api/worker/: main.py  poller.py
hindsight-api-slim/tests/: conftest.py  llm_judge.py  test_admin_api.py  test_async_batch_retain.py  test_async_retain_tags.py  test_bank_config_memory_defense.py  test_bank_health.py  test_bank_stats.py  test_bank_stats_cache.py  test_bank_stats_cache_invalidation.py  test_bank_template_configurable_fields.py  test_bank_templates.py  test_batch_api.py  test_batch_api_validation.py  test_batch_chunking.py  test_bedrock_service_tier.py  test_chunking.py  test_codex_oauth_refresh.py  test_combined_scoring.py  test_config_memory_defense_default.py  test_config_validation.py  test_consolidation.py  test_consolidation_dedup.py  test_consolidation_embedding_validation.py  test_consolidation_retry_budget.py  test_consolidation_retry_dedup_by_bank.py  test_consolidation_scope_parallelism.py  test_consolidation_write_scopes.py  test_curation_http.py  test_custom_embedding_dimension.py  test_db_abstraction.py  test_db_utils.py  test_delta_operation_parse.py  test_document_chunks_and_reprocess.py  test_document_transfer.py  test_entity_labels.py  test_entity_resolver.py  test_entity_resolver_pg_trgm.py  test_extension_context.py  test_extensions.py  (+85 more)
hindsight-cli/: .openapi-coverage.toml  Cargo.toml
hindsight-cli/src/: api.rs  main.rs
hindsight-cli/src/commands/: bank.rs  document.rs  memory.rs
hindsight-cli/tests/: integration_test.rs
hindsight-clients/python/: .gitlab-ci.yml  .travis.yml  pyproject.toml  setup.py  tox.ini
hindsight-clients/python/.openapi-generator/: FILES
hindsight-clients/python/hindsight_client/: hindsight_client.py
hindsight-clients/python/hindsight_client_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
hindsight-clients/python/test/: test_add_background_request.py  test_async_operation_submit_response.py  test_audit_api.py  test_audit_log_entry.py  test_audit_log_list_response.py  test_audit_log_stats_bucket.py  test_audit_log_stats_response.py  test_background_response.py  test_bank_config_response.py  test_bank_config_update.py  test_bank_list_item.py  test_bank_list_response.py  test_bank_profile_response.py  test_bank_stats_response.py  test_bank_template_config.py  test_bank_template_directive.py  test_bank_template_import_response.py  test_bank_template_manifest.py  test_bank_template_mental_model.py  test_bank_templates_api.py  test_banks_api.py  test_budget.py  test_cancel_operation_response.py  test_child_operation_status.py  test_chunk_data.py  test_chunk_include_options.py  test_chunk_response.py  test_clear_memory_observations_response.py  test_consolidation_request.py  test_consolidation_response.py  test_create_bank_request.py  test_create_directive_request.py  test_create_mental_model_request.py  test_create_mental_model_response.py  test_create_webhook_request.py  test_delete_document_response.py  test_delete_response.py  test_directive_list_response.py  test_directive_response.py  test_directives_api.py  (+95 more)
hindsight-clients/python/tests/: test_bank_config_update_payload.py  test_main_operations.py
hindsight-dev/: pyproject.toml
hindsight-dev/benchmarks/common/: benchmark_runner.py
hindsight-dev/benchmarks/consolidation/: consolidation_benchmark.py
hindsight-dev/benchmarks/locomo/: locomo_benchmark.py
hindsight-dev/benchmarks/longmemeval/: longmemeval_benchmark.py
hindsight-dev/benchmarks/obs/: README.md  __init__.py  obs_benchmark.py
hindsight-dev/benchmarks/perf/: recall_perf.py  system_perf.py
hindsight-dev/benchmarks/swebench/: .gitignore  README.md  __init__.py  agent_hooks.py  memory_glue.py  metrics.py  requirements.txt  (+3 more)
hindsight-dev/hindsight_dev/: generate_changelog.py  generate_openapi.py
hindsight-dev/tests/: test_obs_dedup.py
hindsight-embed/: pyproject.toml
hindsight-embed/hindsight_embed/: __init__.py  cli.py  daemon_embed_manager.py  env.example  env_template.py  profile_manager.py
hindsight-embed/tests/: test_env_template.py  test_profile_daemon_config.py
hindsight-integration-tests/: README.md  pyproject.toml
hindsight-integration-tests/tests/: test_hermes_embedded_smoke.py
hindsight-integrations/cline/: LICENSE  README.md  install.py  pyproject.toml  settings.json
hindsight-integrations/composio/: pyproject.toml
hindsight-integrations/cursor/: LICENSE  README.md  pyproject.toml  settings.json
hindsight-integrations/cursor-cli/: README.md  pyproject.toml  settings.json
hindsight-integrations/dify/: README.md  pyproject.toml
hindsight-integrations/haystack/: README.md  pyproject.toml
hindsight-integrations/llamaindex/: pyproject.toml
hindsight-integrations/pipecat/: CHANGELOG.md  README.md  pyproject.toml
hindsight-integrations/roo-code/: README.md  pyproject.toml  settings.json
hindsight-integrations/vapi/: CHANGELOG.md  README.md  pyproject.toml
hindsight-integrations/zed/: README.md  pyproject.toml  settings.json
(+1068 files in other folders)
