[project]
name = "hindsight-cline"
version = "0.2.0"
description = "Cline integration for Hindsight - persistent long-term memory via Cline lifecycle hooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "cline",
    "hooks",
    "agents",
    "hindsight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.scripts]
hindsight-cline = "hindsight_cline.cli:main"

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Documentation = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/cline"
Repository = "https://github.com/vectorize-io/hindsight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindsight_cline"]
# The hook payload under hindsight_cline/hooks/ (the four hook scripts, their
# lib/ package, and settings.json) ships as package data; the installer
# extracts it via importlib.resources.
artifacts = [
    "hindsight_cline/hooks/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "hindsight_cline/**/*",
    "tests/**/*",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
