[project]
name = "hindsight-dify"
version = "0.1.0"
description = "Persistent long-term memory for Dify workflows via Hindsight."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" },
]
dependencies = [
    "dify_plugin>=0.6.0",
    "hindsight-client>=0.4.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Repository = "https://github.com/vectorize-io/hindsight"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
